--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ php:
   - 5.5
 
 before_script:
-  - composer install --dev
+  - composer install --no-interaction --prefer-source --dev
 
 script: VERBOSE=true ./tests/run-tests.sh -s tests/
